log/microscope_log_190620_165114.txt
2019-06-20T16:51:15|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "Microscope_app.py", line 48, in <module>
    app = MicroscopeApp(sys.argv)
  File "C:\Users\lindat18\AppData\Local\Continuum\miniconda3\envs\scopefoundry\lib\site-packages\ScopeFoundry\base_app.py", line 338, in __init__
    self.setup()
  File "Microscope_app.py", line 30, in setup
    from HW_picoharp_master.picoharp_scan import PicoHarp_Scan
  File "C:\Users\lindat18\Dropbox\Ginger_Lab\Microscope_App\HW_picoharp_master\picoharp_scan.py", line 38
    self.img_item.setImage(sum_disp_img)
                                       ^
IndentationError: unindent does not match any outer indentation level

